frontend/src/_styles/theme.scss
/* ... */
// Table set to full width
.jet-data-table thead {
  display: flex !important;

  tr {
    flex-grow: 1;

    th:last-child {
      flex: 1 1 auto;
    }
  }
}

tbody {
  width: 100% !important;
  flex-grow: 1;

  tr {
    width: 100% !important;

    td:last-child {
      flex: 1 1 auto;
    }
  }
}

.datepicker-widget.theme-dark {
  .react-datepicker__tab-loop {
    .react-datepicker__header {
      background-color: #232e3c;

      .react-datepicker__current-month,
      .react-datepicker__day-name,
      .react-datepicker__month-select,
      .react-datepicker__year-select {
        color: white;
      }

      .react-datepicker__month-select,
      .react-datepicker__year-select {
        background-color: transparent;
      }
    }

    .react-datepicker__month {
      background-color: #232e3c;

      .react-datepicker__day {
        color: white;

        &:hover {
          background-color: #636466;
        }
      }

      .react-datepicker__day--outside-month {
        opacity: 0.5;
      }
    }

    .react-datepicker {
      background-color: #232e3c;
    }
  }
}

.theme-dark .list-group-item {
  &:hover {
    background-color: #232e3c;
  }
}

.theme-dark {

  .CalendarMonth,
  .DayPickerNavigation_button,
  .CalendarDay,
  .CalendarMonthGrid,
  .DayPicker_focusRegion,
  .DayPicker {
    background-color: #232e3c;
  }

  .DayPicker_weekHeader_ul,
  .CalendarMonth_caption,
  .CalendarDay {
    color: white;
  }

  .CalendarDay__selected_span,
  .CalendarDay__selected_start,
  .CalendarDay__selected_end {
    background-color: #4D72FA;
    color: white;
  }

  .CalendarDay {
    border-color: transparent; //hiding the border around days in the dark theme

    &:hover {
      background-color: #636466;
    }
  }

  .DateInput_fangStroke {
    stroke: #232E3C;
    fill: #232E3C;
  }

  .DayPickerNavigation_svg__horizontal {
    fill: white;
  }

  .DayPicker__withBorder {
    border-radius: 0;
  }

  .DateRangePicker_picker {
    background-color: transparent;
  }
}

.link-widget {
  display: flex;
  align-items: center;
  overflow: auto;

  &.hover {
    a {
      &:hover {
        text-decoration: underline;
      }
    }
  }

  &.no-underline {
    a {
      text-decoration: none !important;
    }
  }

  &.underline {
    a {
      text-decoration: underline;
    }
  }

  &::-webkit-scrollbar {
    width: 0;
    height: 0;
    background: transparent;
  }
}

.home-modal-component.modal-version-lists {
  .modal-header {
    .btn-close {
      top: auto;
    }
  }
}

.modal-version-lists {
  max-height: 80vh;

  .modal-body {
    height: 80%;
    overflow: auto;
  }

  .modal-footer,
  .modal-header {
    height: 10%;
  }

  .version-wrapper {
    display: flex;
    justify-content: flex-start;
    padding: 0.75rem 0.25rem;
    border: 1px solid var(--slate7);
  }
}

.dropdown-table-column-hide-common {
  border-radius: 3px;
  height: auto;
  overflow-y: scroll;
  padding: 8px 16px;
  width: 20rem;
  max-height: 200px;
}

.dropdown-table-column-hide {
  background-color: #ffffff;
  box-shadow: 0 0 0 2px #0000001a;
}

.dropdown-table-column-hide-dark-themed {
  color: #ffffff !important;
  background-color: #1f2936 !important;
  box-shadow: 0 0 0 2px #9292921a;
}

.hide-column-table-text {
  margin: 0 !important;
}

.hide-column-name {
  padding-left: 10px !important;
}

.rest-methods-url {
  .cm-s-default {
    .cm-string-2 {
      color: #000;
    }
  }
}

.tooljet-database {

  .table-header,
  .table-name,
  .table-cell {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .table-name {
    color: #000;
    width: 250px;
  }

  .table-left-sidebar {
    max-width: 288px;
  }

  .add-table-btn {
    height: 32px;
  }

  .table-header {
    background: #ECEEF0;
  }

  .table-header,
  .table-cell {
    max-width: 230px;
  }

  .add-more-columns-btn {
    background: var(--indigo3);
    font-weight: 500;
    color: var(--indigo9);
    font-size: 12px;
    border-radius: 600;
  }

  .delete-row-btn {
    max-width: 140px;
  }

  .table-list-item-popover {
    display: none;
  }

  .table-list-item:hover .table-list-item-popover {
    display: block;
  }
}

// download pop-up in the table widget
.table-widget-download-popup {
  .cursor-pointer {
    width: 130px;

    &:hover {
      font-weight: bolder;
    }
  }
}
/* ... */

